Changed z-index fix to alter banner z-index variable instead

--- a/src/sass/_clientView.scss
+++ b/src/sass/_clientView.scss
@@ -1,6 +1,6 @@
 .client-header-sticky-container {
   position: relative;
-  z-index: auto;
+  z-index: $client-header-z;
 }
 
 .client-header {
