--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -200,8 +200,8 @@ $feedback-z: 11000;
 $skill-code-dropdown-z: 10500;
 $back-to-top-z: 10200;
 $feedback-button-z: 10000;
-$client-header-z: 9001;
-$banner-toggle-z: 100;
+$client-header-z: 100;
+$banner-toggle-z: 101;
 $spinner-z: 99;
 $bureau-spinner-z: 98;
 $autosuggest-suggestions-container-open-z: 20;
